# semantic-docs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  semantic-docs-blogpost.md
semantic_docs/: __init__.py
semantic_docs/cli/: __init__.py  cluster.py  indexer.py  search.py  validator.py
semantic_docs/config/: __init__.py  settings.py
semantic_docs/engines/: __init__.py  base_indexer.py  cluster_engine.py  drift_detector.py  incremental_indexer.py  semantic_engine.py
semantic_docs/integrations/: __init__.py  claude_hooks.py  pre_commit_validator.py
semantic_docs/services/: ai_summarizer.py
tests/: __init__.py
tests/test_config/: test_settings.py
tests/test_engines/: test_semantic_engine.py
tests/test_integrations/: test_claude_hooks.py
